runs/2025-02-28-13-08-23/logs/GLAD/build-success.log
'getOption("repos")' replaces Bioconductor standard repositories, see
'help("repositories", package = "BiocManager")' for details.
Replacement repositories:
    CRAN: https://p3m.dev/cran/__linux__/noble/latest
Bioconductor version 3.20 (BiocManager 1.30.25), R 4.4.2 (2024-10-31)
Installing package(s) 'GLAD'
also installing the dependencies ‘awsMethods’, ‘gsl’, ‘aws’

trying URL 'https://p3m.dev/cran/__linux__/noble/latest/src/contrib/awsMethods_1.1-1.tar.gz'
Content type 'binary/octet-stream' length 22016 bytes (21 KB)
==================================================
downloaded 21 KB

trying URL 'https://p3m.dev/cran/__linux__/noble/latest/src/contrib/gsl_2.1-8.tar.gz'
Content type 'binary/octet-stream' length 528731 bytes (516 KB)
==================================================
downloaded 516 KB

trying URL 'https://p3m.dev/cran/__linux__/noble/latest/src/contrib/aws_2.5-6.tar.gz'
Content type 'binary/octet-stream' length 1242958 bytes (1.2 MB)
==================================================
downloaded 1.2 MB

trying URL 'https://bioconductor.org/packages/3.20/bioc/src/contrib/GLAD_2.70.0.tar.gz'
Content type 'application/x-gzip' length 1369592 bytes (1.3 MB)
==================================================
downloaded 1.3 MB

* installing *binary* package ‘awsMethods’ ...
* ‘awsMethods’ was already a binary package and will not be rebuilt
* creating tarball
packaged installation of ‘awsMethods’ as ‘awsMethods_1.1-1_R_x86_64-pc-linux-gnu.tar.gz’
* DONE (awsMethods)
* installing *binary* package ‘gsl’ ...
* ‘gsl’ was already a binary package and will not be rebuilt
* creating tarball
packaged installation of ‘gsl’ as ‘gsl_2.1-8_R_x86_64-pc-linux-gnu.tar.gz’
* DONE (gsl)
* installing *binary* package ‘aws’ ...
* ‘aws’ was already a binary package and will not be rebuilt
* creating tarball
packaged installation of ‘aws’ as ‘aws_2.5-6_R_x86_64-pc-linux-gnu.tar.gz’
* DONE (aws)
* installing *source* package ‘GLAD’ ...
** package ‘GLAD’ successfully unpacked and MD5 sums checked
** using staged installation
checking for pkg-config... /usr/bin/pkg-config
checking pkg-config is at least version 0.9.0... yes
checking for GSL... yes
GSL has been found on the operating system
operating system: Linux
configure: creating ./config.status
config.status: creating src/Makevars

src/Makevars file

PKG_LIBS = -lgsl -lgslcblas -lm 
PKG_CPPFLAGS = -I/usr/local/include

** libs
using C compiler: ‘gcc (Ubuntu 13.3.0-6ubuntu2~24.04) 13.3.0’
using C++ compiler: ‘g++ (Ubuntu 13.3.0-6ubuntu2~24.04) 13.3.0’
g++ -std=gnu++17 -I"/usr/local/lib/R/include" -DNDEBUG -I/usr/local/include  -I/usr/local/include    -fpic  -g -O2 -fstack-protector-strong -Wformat -Wformat-security -Wdate-time -D_FORTIFY_SOURCE=2 -g  -DR_NO_REMAP -c BkpInfo.cpp -o BkpInfo.o
g++ -std=gnu++17 -I"/usr/local/lib/R/include" -DNDEBUG -I/usr/local/include  -I/usr/local/include    -fpic  -g -O2 -fstack-protector-strong -Wformat -Wformat-security -Wdate-time -D_FORTIFY_SOURCE=2 -g  -DR_NO_REMAP -c HaarSeg.cpp -o HaarSeg.o
g++ -std=gnu++17 -I"/usr/local/lib/R/include" -DNDEBUG -I/usr/local/include  -I/usr/local/include    -fpic  -g -O2 -fstack-protector-strong -Wformat -Wformat-security -Wdate-time -D_FORTIFY_SOURCE=2 -g  -DR_NO_REMAP -c MoveBkp.cpp -o MoveBkp.o
g++ -std=gnu++17 -I"/usr/local/lib/R/include" -DNDEBUG -I/usr/local/include  -I/usr/local/include    -fpic  -g -O2 -fstack-protector-strong -Wformat -Wformat-security -Wdate-time -D_FORTIFY_SOURCE=2 -g  -DR_NO_REMAP -c OutliersGNL.cpp -o OutliersGNL.o
g++ -std=gnu++17 -I"/usr/local/lib/R/include" -DNDEBUG -I/usr/local/include  -I/usr/local/include    -fpic  -g -O2 -fstack-protector-strong -Wformat -Wformat-security -Wdate-time -D_FORTIFY_SOURCE=2 -g  -DR_NO_REMAP -c chrBreakpoints.cpp -o chrBreakpoints.o
g++ -std=gnu++17 -I"/usr/local/lib/R/include" -DNDEBUG -I/usr/local/include  -I/usr/local/include    -fpic  -g -O2 -fstack-protector-strong -Wformat -Wformat-security -Wdate-time -D_FORTIFY_SOURCE=2 -g  -DR_NO_REMAP -c cutree.cpp -o cutree.o
g++ -std=gnu++17 -I"/usr/local/lib/R/include" -DNDEBUG -I/usr/local/include  -I/usr/local/include    -fpic  -g -O2 -fstack-protector-strong -Wformat -Wformat-security -Wdate-time -D_FORTIFY_SOURCE=2 -g  -DR_NO_REMAP -c daglad.cpp -o daglad.o
g++ -std=gnu++17 -I"/usr/local/lib/R/include" -DNDEBUG -I/usr/local/include  -I/usr/local/include    -fpic  -g -O2 -fstack-protector-strong -Wformat -Wformat-security -Wdate-time -D_FORTIFY_SOURCE=2 -g  -DR_NO_REMAP -c distance.cpp -o distance.o
distance.cpp: In function ‘void R_distance(double*, int*, int*, double*, int*, int*)’:
distance.cpp:238:7: error: ‘error’ was not declared in this scope; did you mean ‘perror’?
  238 |       error("distance(): invalid distance");
      |       ^~~~~
      |       perror
make: *** [/usr/local/lib/R/etc/Makeconf:204: distance.o] Error 1
ERROR: compilation failed for package ‘GLAD’
* removing ‘/mnt/library/GLAD’

The downloaded source packages are in
	‘/tmp/RtmpkIM6ID/downloaded_packages’
Old packages: 'bslib', 'cli', 'curl', 'evaluate', 'httr2', 'jsonlite',
  'openssl', 'pillar', 'pkgbuild', 'processx', 'ps', 'purrr', 'R6', 'Rcpp',
  'rlang', 'sessioninfo', 'systemfonts', 'testthat', 'textshaping', 'tinytex',
  'xfun', 'zip', 'class', 'foreign', 'KernSmooth', 'MASS', 'Matrix', 'nlme',
  'nnet', 'rpart', 'spatial'
Warning message:
In install.packages(...) :
  installation of package ‘GLAD’ had non-zero exit status
Error: unexpected 'else' in "  else"
Execution halted

real	0m21.259s
user	0m6.112s
sys	0m2.207s
